sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:20: error: type mismatch;
 found   : Unit
 required: Boolean
  } while (echangefait=1)
                      ^