sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var lg:Int =getNombreValeurs()
  var lg1=lg-2
  var echangefait: Int=0
  do {
    echangefait=0
  	for (i <- 0 to lg1){
  	  if (plusPetitQue(i,i+1)==false){
   	   echange(i,i+1)
       echangefait=1
  	  }
	  }
	  for (i <-lg1 to 0 ){
	    if (plusPetitQue(i,i+1)==false){
 	     echange(i,i+1)
       echangefait=1
   	 }
  	}
  } while (echangefait=1)
}